<resources>
    <string name="app_name">EKassirTest</string>

    <string name="base_url">http://careers.ekassir.com/test/</string>

    <string name="order_detail_label">Заказ</string>
    <string name="end_address_title">Куда</string>
    <string name="start_address_title">Откуда</string>
    <string name="order_time_title">Время заказа</string>
    <string name="price_title">Стоимость</string>
    <string name="vehicle_info_title">Информация об автомобиле</string>
    <string name="driver_name_title">Водитель</string>
    <string name="model_name_title">Модель автомобиля</string>
    <string name="reg_number_title">Гос. номер</string>
    <string name="load_error_title">Ошибка загрузки</string>
</resources>
