<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/start_address_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/start_address_title"/>
                <TextView
                    android:id="@+id/start_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    tools:text="Санкт-Петербург, Кушелевская дорога, 123"/>

                <TextView
                    android:id="@+id/end_address_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/end_address_title"/>
                <TextView
                    android:id="@+id/end_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    tools:text="Санкт-Петербург, Коннгвардейский бульвар, 4"/>

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:columnCount="2">
                    <TextView
                        android:id="@+id/order_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:text="@string/order_time_title"/>
                    <TextView
                        android:id="@+id/price_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:text="@string/price_title"/>
                    <TextView
                        android:id="@+id/order_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        tools:text="23:59:59"/>
                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        tools:text="450.00 RUB"/>
                </android.support.v7.widget.GridLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ProgressBar
                        android:id="@+id/photo_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>
                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"/>
                    <TextView
                        android:id="@+id/load_error_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/load_error_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/vehicle_info_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:padding="8dp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/driver_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/driver_name_title"/>
                <TextView
                    android:id="@+id/driver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    tools:text="Иванов Иван Иванович"/>

                <TextView
                    android:id="@+id/model_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/model_name_title"/>
                <TextView
                    android:id="@+id/model_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    tools:text="ЗАЗ 968"/>

                <TextView
                    android:id="@+id/reg_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/reg_number_title"/>
                <TextView
                    android:id="@+id/reg_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    tools:text="А 123 ВС"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>